--- a/control-de-plagas.html
+++ b/control-de-plagas.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="control de plagas de JGDESINFECCIONES" />
+    <meta name="keywords" content="plagas,control,experiencia,sanidad" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -16,22 +18,15 @@
     <title>control de plagas</title>
   </head>
   <body>
-    <div class="top_nav">
-      <p class="color_telefono">
-        <a href=""> <img src="img/telefono.png" alt="" class="telefono" /></a>
-        54-3512002606
-      </p>
-      <p>
-        <a href=""><img src="img/reloj.png" alt="" class="reloj" /></a>
-        Lun-vier:8 am-5 am
-        <a href="">
-          <img src="img/instagram (2).png" alt="" class="instagram"
-        /></a>
-      </p>
-    </div>
+
+    <!-- <div class="top_nav">
+      <p class="parrafo_top"> <a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> tel-3512002606  </p>
+         <p class="parrafo_top">  <a href=""> <img src="img/reloj.png" alt="" class="reloj"> </a>   Abierto de lunes a viernes  <a href=""> <img src="img/instagram (3).png" alt="" class="instagram"> </a> </p> -->
+
+ </div>
 
     <!-- INICIA NAV========================== -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-ligth">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="" /> </a>
         <button
@@ -95,7 +90,7 @@
     <!-- TERMINA NAV================================= -->
 
     <!-- 1RA SECTION==================================================================== -->
-    <div class="container">
+    <div class="container-plaga">
       <div class="row py-4 border-bottom">
         <div class="col-md-6">
           <img
