--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -4,6 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="empresa de fumigacion profesional" />
+    <meta
+      name="keywords"
+      content="fumigacion,profesional,quimicos,bioinsumos"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -15,25 +20,20 @@
     <link rel="stylesheet" href="css/pruebacss.css" />
     <title>fumigaciones</title>
   </head>
-  <body>
-    <div class="top_nav">
-      <p class="color_telefono">
-        <a href=""> <img src="img/telefono.png" alt="" class="telefono" /></a>
-        54-3512002606
-      </p>
-      <p>
-        <a href=""><img src="img/reloj.png" alt="" class="reloj" /></a>
-        Lun-vier:8 am-5 am
-        <a href="">
-          <img src="img/instagram (2).png" alt="" class="instagram"
-        /></a>
-      </p>
-    </div>
+  <body>  
+
+    <!-- <div class="top_nav">
+      <p class="parrafo_top"> <a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> tel-3512002606  </p>
+         <p class="parrafo_top">  <a href=""> <img src="img/reloj.png" alt="" class="reloj"> </a>   Abierto de lunes a viernes  <a href=""> <img src="img/instagram (3).png" alt="" class="instagram"> </a> </p> -->
+
+ </div>
 
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
+        <a class="navbar-brand" href="#"
+          ><img src="img/logo.png" alt="logo empresa"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -98,7 +98,7 @@
       <div class="row">
         <h2 class="titulo_fumigacion">FUMIGACION</h2>
         <div class="col-md-7 px-5">
-          <img src="img/fumigation.jpg" alt="" class="w-100" />
+          <img src="img/fumigation.jpg" alt="fumigacion" class="w-100" />
         </div>
 
         <div class="col-md-5 px-5 py-5">
@@ -144,10 +144,10 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-12 bg-primary">
-        <p class="presupuesto"><a href=""> PEDI TU PRESUPUESTO</a></p>
-      </div>
+    
+
+    <div class="d-grid gap-5  py-5" >
+      <button class="btn btn-primary" type="button">Pedir Presupuesto</button>
     </div>
 
     <footer class="footer">
