--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="contactanos" />
+    <meta name="keywords" content="contacto,celular,redes,instagram,facebook,"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -16,25 +19,18 @@
     <title>contacto</title>
   </head>
   <body>
-    <div class="top_nav">
-      <p class="color_telefono">
-        <a href=""> <img src="img/telefono.png" alt="" class="telefono" /></a>
-        54-3512002606
-      </p>
-      <p>
-        <a href=""><img src="img/reloj.png" alt="" class="reloj" /></a>
-        Lun-vier:8 am-5 am
-        <a href="">
-          <img src="img/instagram (2).png" alt="" class="instagram"
-        /></a>
-      </p>
-    </div>
+
+    <!-- <div class="top_nav">
+      <p class="parrafo_top"> <a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> tel-3512002606  </p>
+         <p class="parrafo_top">  <a href=""> <img src="img/reloj.png" alt="" class="reloj"> </a>   Abierto de lunes a viernes  <a href=""> <img src="img/insta.png" alt="" class="instagram"> </a> </p> -->
+
+ </div>
 
     <!-- INICIA NAV========================== -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-ligth">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" alt="" class="w-100"
+          <img src="img/logo.png" alt="logo empresa" class="w-100"
         /></a>
         <button
           class="navbar-toggler"
@@ -97,14 +93,14 @@
     <!-- TERMINA NAV================================= -->
 
     <div class="imagen_contacto">
-      <img src="img/contactanos-2.jpg" alt="" class="w-100" />
+      <img src="img/carrousel_contacto.jpg" alt="contacto" class="w-100" />
     </div>
 
     <!-- INICIA FORMULARIO============================================= -->
 
-    <div class="conteiner">
+    <div class="container_form">
       <div class="row px-3 py-4">
-        <div class="col-md-6 py-5 bg-success bg-gradient">
+        <div class="col-md-6 py-5  ">
           <form>
             <h2 class="py-3">Contactanos</h2>
             <div class="mb-3">
@@ -167,19 +163,23 @@
 
     <!-- TERMINA FORMULARIO================================================== -->
 
-    <!-- MAPA -->
-    <div class="container">
+    
+    <div class="container_aside">
       <div class="row">
         <div class="col-md-12">
           <h4 class="subtitulo_contacto">Medios de Contacto</h4>
 
           <div class="informacion">
             <h6 class="py-1">
-              <img src="img/ubicacion.png" alt="" class="logo_contacto" />
+              <img
+                src="img/ubicacion.png"
+                alt="ubicacion"
+                class="logo_contacto"
+              />
               Arauco 800-848, Córdoba
             </h6>
             <h6 class="py-1">
-              <img src="img/llamada.png" alt="" class="logo_contacto" />
+              <img src="img/llamada.png" alt="telefono" class="logo_contacto" />
               03512002606
             </h6>
             <h6 class="py-1">
