--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="fumigacion y desinfeccion profesional argentina,">
+    <meta name="keywords" content="empresa ,contacto,fumigacion,desinfeccion,plagas">
     <!-- Bootstrap CSS -->
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,15 +14,15 @@
   </head>
   <body>
    
-    <div class="top_nav">
-      <p class="color_telefono"><a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> 54-3512002606 </p>
-      <p>   <a href=""><img src="img/reloj.png" alt="" class="reloj"></a>  Lun-vier:8 am-5 am    <a href=""> <img src="img/instagram (2).png" alt="" class="instagram"></a> </p>
-    </div>
+    <!-- <div class="top_nav">
+      <p class="parrafo_top"> <a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> tel-3512002606  </p>
+         <p class="parrafo_top">  <a href=""> <img src="img/reloj.png" alt="" class="reloj"> </a>   Abierto de lunes a viernes  <a href=""> <img src="img/insta.png" alt="" class="instagram"> </a> </p> -->
 
+ </div>
     <!-- INICIA NAV========================== -->
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="" class="logo_jg"></a>
+    <nav class="navbar navbar-expand-lg navbar-light  fixed-top  ">
+        <div class="container-fluid " >
+          <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="logo empresa" class="logo_jg"></a>
           <button class="navbar-toggler   type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
           </button>
@@ -68,13 +69,13 @@
   </div>
   <div class="carousel-inner" >
     <div class="carousel-item active">
-      <img src="img/carrousel-1 (2).jpg" class="d-block w-100" alt="desinfecciones,fumigacion">
+      <img src="img/carrousel_5.jpg" class="d-block w-100 " alt="desinfecciones,fumigacion">
     </div>
     <div class="carousel-item">
-      <img src="img/carrousel-2.jpg" class="d-block w-100" alt="">
+      <img src="img/carrousel_6.jpg" class="d-block w-100" alt="carrousel,desinfeccion">
     </div>
     <div class="carousel-item">
-      <img src="img/carrousel-3.jpg" class="d-block w-100" alt="...">
+      <img src="img/carrousel_7.jpg" class="d-block w-100" alt="carrousel,fumigacion">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -108,7 +109,7 @@
    </div>
     
    <div class="col-md-4 py-5">
-     <img src="/img/fumigacion_inicio.jpg" alt="" class="py-5 px-5 w-100 ">
+     <img src="/img/fumigacion_inicio.jpg" alt="fumigacion" class="py-5 px-5 w-100 ">
 
    </div>
 
@@ -172,10 +173,10 @@
 <div class="container py-5 border-top">
   <div class="row">
     <div class="col-md-6">     
-       <img src="img/asesoramiento.jpg" alt="" class="w-100">   
+       <img src="img/asesoramiento.jpg" alt="asesoramiento," class="w-100">   
       </div>
     <div class="col-md-6">
-    <h2 class="subtitulos">Asesoramiento</h2>
+    <h2 class="subtitulos">Asesoramiento <span></span></h2>
     <p>Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
     <ul>
       <li>Procesos de desinfección acordes a la real necesidad de cada industria.</li>
@@ -198,20 +199,20 @@
 <div class="container trabajos py-4 border-top">
   <section class="main row bg-ligth ">
       <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-4 ">
-         <a href=""><img src="img/limpieza de tanques icono.png" alt="" class="logo_inicio"></a>  
+         <a href=""><img src="img/limpieza de tanques icono.png" alt="tanques,limpieza" class="logo_inicio"></a>  
           <h5>  Limpieza de tanques </h5>
       </article>
       <article class="col-xs-12 col-sm-4 col-md-3 col-lg py-3">
-       <a href="">  <img src="img/control de plagas icono.png" alt="" class="logo_inicio"></a>   
+       <a href="">  <img src="img/control de plagas icono.png" alt="plagas,control" class="logo_inicio"></a>   
           <h5>  Control de plagas </h5>
       </article>
       <article class="col-xs-12 col-sm-8 col-md-9 col-lg py-3">
-     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="" class="logo_inicio"></a>    
+     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="incendios" class="logo_inicio"></a>    
          <h5> seguridad contra incendios </h5>
       </article>
   
       <article class="col-xs-12  col-sm-8 col-md-9 col-lg py-3">
-      <a href=""><img src="img/limpieza profunda icono.png" alt="" class="logo_inicio"></a>   
+      <a href=""><img src="img/limpieza profunda icono.png" alt="limpieza profunda" class="logo_inicio"></a>   
           <h5> Limpieza profunda </h5>
   
       </article>
