--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/pruebacss.css">
+    <meta name="description" content="limpieza de tanques profesional,">
+    <meta name="keywords" content="limpieza,tanques,profesional,">
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -16,14 +19,14 @@
   </head>
   <body>
 
-    <div class="top_nav">
-      <p class="color_telefono"><a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> 54-3512002606 </p>
-      <p>   <a href=""><img src="img/reloj.png" alt="" class="reloj"></a>  Lun-vier:8 am-5 am    <a href=""> <img src="img/instagram (2).png" alt="" class="instagram"></a> </p>
-    </div>
+    <!-- <div class="top_nav">
+      <p class="parrafo_top"> <a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> tel-3512002606  </p>
+         <p class="parrafo_top">  <a href=""> <img src="img/reloj.png" alt="" class="reloj"> </a>   Abierto de lunes a viernes  <a href=""> <img src="img/instagram (3).png" alt="" class="instagram"> </a> </p> -->
 
+ </div>
 
     <!-- INICIA NAV========================== -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-ligth">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
         <button
@@ -92,7 +95,7 @@
 
 
 
-    <div class="container">
+    <div class="container_tanques">
       <div class="row">
         <div class="col-md-7 px-4 py-4">
           <h2 class="subtitulos_tanques">Limpieza de tanques de agua</h2>
