--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
    </div>
     
    <div class="col-md-4 py-5">
-     <img src="/img/fumigacion_inicio.jpg" alt="fumigacion" class="py-5 px-5 w-100 ">
+     <img src="img/fumigacion_inicio.jpg" alt="fumigacion" class="img ">
 
    </div>
 
@@ -173,9 +173,9 @@
 <div class="container py-5 border-top">
   <div class="row">
     <div class="col-md-6">     
-       <img src="img/asesoramiento.jpg" alt="asesoramiento," class="w-100">   
+       <img src="img/asesoramiento.jpg" alt="asesoramiento," class="img_asesoramiento">   
       </div>
-    <div class="col-md-6">
+    <div class="col-md-6 px-5 py-5">
     <h2 class="subtitulos">Asesoramiento <span></span></h2>
     <p>Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
     <ul>
