--- a/empresa.html
+++ b/empresa.html
@@ -31,66 +31,37 @@
  </div>
 
     <!-- INICIA NAV========================== -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-ligth ">
-      <div class="container-fluid  ">
-        <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" alt="logo empresa"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-light  fixed-top  ">
+      <div class="container-fluid " >
+        <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="logo empresa" class="logo_jg"></a>
+        <button class="navbar-toggler   type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item px-3">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link " href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item px-3">
               <a class="nav-link" href="empresa.html">Empresa</a>
             </li>
-            <li class="nav-item dropdown px-3">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
+            <li class="nav-item dropdown px-3 ">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Servicios
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown ">
-                <li>
-                  <a class="dropdown-item" href="control-de-plagas.html"
-                    >Control de plagas</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="limpieza-de-tanques.html"
-                    >Limpieza de tanques</a
-                  >
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="fumigaciones.html"
-                    >Fumigaciones</a
-                  >
-                </li>
+              <ul class="dropdown-menu " aria-labelledby="navbarDropdown ">
+                <li><a class="dropdown-item" href="control-de-plagas.html">Control de plagas</a></li>
+                <li><a class="dropdown-item" href="limpieza-de-tanques.html">Limpieza de tanques</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="fumigaciones.html">Fumigaciones</a></li>
               </ul>
             </li>
+            
           </ul>
+          
         </div>
       </div>
     </nav>
@@ -225,9 +196,9 @@
     <div class="container py-5 ">
       <div class="row border-top py-5">
         <div class="col-md-6">
-          <img src="img/photoshop.jpg" class="img-thumbnail" alt="...">
+          <img src="img/photoshop.jpg" class="img" alt="...">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 px-5">
           <h2>Mas de 15 años brindando nuestro servicio</h2>
           <p>
             Luego de 35 años, creemos que contamos con experiencia suficiente
