--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <section class="main-row py-4">
    <article>
       <h2 class="titulos_inicio">Desinfecciones en Cordoba </h2>
-      <p class="parrafo_inicio">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; conductos de aire acondicionado; edificios de oficinas (interior y exteriores); limpieza de fin de obras, eliminación de graffitis, medios de transporte y vehículos a domicilio, entre otros.
+      <p class="parrafos_inicio">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; conductos de aire acondicionado; edificios de oficinas (interior y exteriores); limpieza de fin de obras, eliminación de graffitis, medios de transporte y vehículos a domicilio, entre otros.
         Somos también distribuidores de sistemas de higiene, bacteriostáticos, contenedores de higiene femenina, purificadores de aire y sistemas de ozono, desengrasantes, detergentes, ambientadores y celulosa, entre otros. Ofrecemos nuestros productos y servicios tanto para particulares como para todo tipo de empresas y negocios, como los de hostelería, lavanderías o limpieza de vehículos.</p>
    </article>
   </section>
@@ -104,12 +104,12 @@
   <div class="row">
    <div class="col-md-8 py-3">
      <h2 class="titulos_inicio">Expertos en desinfecciones</h2>
-     <p class="parrafo_inicio">Para la seguridad de las personas que se encuentran en un espacio, ya sea viviendo, trabajando o simplemente de paso, es fundamental el mantenimiento de un correcto nivel de higiene y limpieza. En el caso de las empresas, a lo anterior se le suma el impacto económico, puesto que las condiciones de higiene y limpieza que se dan en el desarrollo de la actividad de un negocio repercuten directa o indirectamente en sus resultados a través de diversos factores; como la productividad de los empleados, el correcto funcionamiento y mantenimiento de equipos y maquinaria, o la calidad del producto o servicio prestado al cliente.
+     <p class="parrafos_inicio">Para la seguridad de las personas que se encuentran en un espacio, ya sea viviendo, trabajando o simplemente de paso, es fundamental el mantenimiento de un correcto nivel de higiene y limpieza. En el caso de las empresas, a lo anterior se le suma el impacto económico, puesto que las condiciones de higiene y limpieza que se dan en el desarrollo de la actividad de un negocio repercuten directa o indirectamente en sus resultados a través de diversos factores; como la productividad de los empleados, el correcto funcionamiento y mantenimiento de equipos y maquinaria, o la calidad del producto o servicio prestado al cliente.
       Como empresa de desinfecciones en Córdoba, sabemos que la mejor manera de obtener resultados óptimos es prestando servicios personalizados que se adapten en cada caso a las circunstancias y necesidades del cliente. Para ello, nuestros técnicos llevan a cabo previamente una inspección del espacio en el que se va a realizar la limpieza y desinfección. A partir de este estudio, elaboramos un plan de acción que se ajuste a las características de las instalaciones y los elementos que se encuentran en ella, seleccionando así las estrategias y productos más eficientes para cada servicio. Todo esto, cumpliendo siempre las normativas sanitarias y garantizando un servicio de máxima calidad.</p>
    </div>
     
    <div class="col-md-4 py-5">
-     <img src="img/fumigacion_inicio.jpg" alt="fumigacion" class="img ">
+     <img src="img/fumigacion_inicio.jpg" alt="fumigacion" class="img_desinfeccion ">
 
    </div>
 
@@ -127,8 +127,8 @@
   <section>
 <h2 class="titulos_inicio">Metodologia</h2>
 <h4 class="subtitulos">Inspeccion</h4>
-<p class="parrafo_inicio">Se realiza una minuciosa inspección en el lugar. De esta manera podremos identificar correctamente:</p>
-<ul class="parrafo_inicio">
+<p class="parrafos_inicio">Se realiza una minuciosa inspección en el lugar. De esta manera podremos identificar correctamente:</p>
+<ul class="parrafos_inicio">
   <li>Tipo de roedor</li>
   <li>Magnitud estimada de la población</li>
   <li>Vías de ingreso/egreso</li>
@@ -141,9 +141,9 @@
 
 <div>
 <h4 class="subtitulos">Diagnostico</h4>
-<p class="parrafo_inicio">Con la información obtenida en la inspección, se realiza el correspondiente diagnóstico de la situación. El mismo se entregara en un informe escrito en donde se detallará el estado de situación actual del lugar, los motivos por los cuales se ha llegado a esa situación, un programa pormenorizado de trabajo a llevar a cabo y una estimación de los tiempos necesarios para llegar a una solución.</p>
+<p class="parrafos_inicio">Con la información obtenida en la inspección, se realiza el correspondiente diagnóstico de la situación. El mismo se entregara en un informe escrito en donde se detallará el estado de situación actual del lugar, los motivos por los cuales se ha llegado a esa situación, un programa pormenorizado de trabajo a llevar a cabo y una estimación de los tiempos necesarios para llegar a una solución.</p>
 <h4 class="subtitulos">Control</h4>
-<p class="parrafo_inicio">El control, en la desratización, conjuga varias técnicas. En los lugares donde sea posible podrán utilizarse cebos monodosicos en forma de bloques parafinados o pellets.
+<p class="parrafos_inicio">El control, en la desratización, conjuga varias técnicas. En los lugares donde sea posible podrán utilizarse cebos monodosicos en forma de bloques parafinados o pellets.
 
   En sectores sensibles se utilizara sistema de monitoreo de roedores, mediante cajas cerradas e identificadas. En este aspecto se podrá utilizar placas engomadas y/o jaulas de captura viva.
   
@@ -176,9 +176,9 @@
        <img src="img/asesoramiento.jpg" alt="asesoramiento," class="img_asesoramiento">   
       </div>
     <div class="col-md-6 px-5 py-5">
-    <h2 class="subtitulos">Asesoramiento <span></span></h2>
-    <p>Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
-    <ul>
+    <h2 class="titulos_inicio">Asesoramiento <span></span></h2>
+    <p class="parrafos_inicio">Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
+    <ul class="parrafos_inicio">
       <li>Procesos de desinfección acordes a la real necesidad de cada industria.</li>
       <li>Seguridad y cuidado garantizado para empelados y clientes.</li>
       <li>Uso racionalizado de insumos, evitando gastos por ineficiencias de aplicación.</li>
@@ -196,33 +196,37 @@
 
 
 
-<div class="container trabajos py-4 border-top">
-  <section class="main row bg-ligth ">
+<div class="container_trabajos py-4 border-top">
+  <section class="main_logos row bg-ligth ">
       <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-4 ">
-         <a href=""><img src="img/limpieza de tanques icono.png" alt="tanques,limpieza" class="logo_inicio"></a>  
-          <h5>  Limpieza de tanques </h5>
+         <a href=""><img src="img/logo-plagas.png" alt="tanques,limpieza" class="logo_inicio"></a>  
+          <h5 class="titulos_logo">  Control De Plagas </h5>
       </article>
       <article class="col-xs-12 col-sm-4 col-md-3 col-lg py-3">
-       <a href="">  <img src="img/control de plagas icono.png" alt="plagas,control" class="logo_inicio"></a>   
-          <h5>  Control de plagas </h5>
+       <a href="">  <img src="img/logo-fumigacion.png" alt="plagas,control" class="logo_inicio"></a>   
+          <h5 class="titulos_logo"> Fumigacion </h5>
       </article>
       <article class="col-xs-12 col-sm-8 col-md-9 col-lg py-3">
-     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="incendios" class="logo_inicio"></a>    
-         <h5> seguridad contra incendios </h5>
+     <a href=""> <img src="img/logo_tanque-agua.png" alt="incendios" class="logo_inicio"></a>    
+         <h5 class="titulos_logo"> Limpieza de Tanques </h5>
       </article>
   
       <article class="col-xs-12  col-sm-8 col-md-9 col-lg py-3">
-      <a href=""><img src="img/limpieza profunda icono.png" alt="limpieza profunda" class="logo_inicio"></a>   
-          <h5> Limpieza profunda </h5>
+      <a href=""><img src="img/acuerdo.png" alt="limpieza profunda" class="logo_inicio"></a>   
+          <h5 class="titulos_logo"> Asesoramiento </h5>
   
       </article>
   </section>
   </div>
-
+ 
 <footer class="footer">
-  
-  <p class="parrafo_footer">JGdesinfecciones - Todos los derechos reservados- <a href=""> info@JGDESINFECCIONES.COM.ARS</a></p>
-<p class="parrafo_footer"> <a href="">3512002606</a> </p>
+   <div class="logos border-bottom">
+    <div>    <a href="https://www.facebook.com/GonzalezJoseAlejandro/">   <img src="img/facebook_logo.png" alt="" class="logo_footer">   </a> </div>
+    <div>  <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer">  </a> </div>
+    <div>   <a href="https://www.instagram.com/jg.desinfecciones/">  <img src="img/instagram_logo.png" alt="" class="logo_footer"></div>   </a> 
+   </div>
+ 
+   <p class="parrafo_footer"> <img src="img/gmail_logo.png" alt="" class="logo_footer"> desinfeccionesgonzalez@hotmail.com</p>
 </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
