--- a/empresa.html
+++ b/empresa.html
@@ -196,7 +196,7 @@
     <div class="container py-5 ">
       <div class="row border-top py-5">
         <div class="col-md-6">
-          <img src="img/photoshop.jpg" class="img" alt="...">
+          <img src="img/farmer-spraying-vegetables-in-the-garden-with-herbicides-man-in-black-apron.jpg" class=" w-100" alt="...">
         </div>
         <div class="col-md-6 px-5">
           <h2>Mas de 15 años brindando nuestro servicio</h2>
@@ -227,11 +227,13 @@
     
 
     <footer class="footer">
-      <p class="parrafo_footer">
-        JGdesinfecciones - Todos los derechos reservados-
-        <a href=""> info@JGDESINFECCIONES.COM.ARS</a>
-      </p>
-      <p class="parrafo_footer">312002606</p>
+      <div>
+         <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+      <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
+      <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+       <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+      </div>
+       
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
