--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -122,11 +122,13 @@
     </div>
 
     <footer class="footer">
-      <p class="parrafo_footer">
-        JGdesinfecciones - Todos los derechos reservados-
-        <a href=""> info@JGDESINFECCIONES.COM.ARS</a>
-      </p>
-      <p class="parrafo_footer">312002606</p>
+      <div>
+         <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+      <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
+      <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+       <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+      </div>
+       
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
