--- a/index.html
+++ b/index.html
@@ -196,33 +196,41 @@
 
 
 
-<div class="container trabajos py-4 border-top">
-  <section class="main row bg-ligth ">
-      <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-4 ">
-         <a href=""><img src="img/limpieza de tanques icono.png" alt="tanques,limpieza" class="logo_inicio"></a>  
+<div class="container_trabajos trabajos py-4 border-top">
+  <section class="main_logos bg-ligth ">
+    <div class="row">
+   <article class="col-md-3 ">
+         <a href=""><img src="img/operador.png" alt="tanques,limpieza" class="logo_inicio"></a>  
           <h5>  Limpieza de tanques </h5>
       </article>
-      <article class="col-xs-12 col-sm-4 col-md-3 col-lg py-3">
-       <a href="">  <img src="img/control de plagas icono.png" alt="plagas,control" class="logo_inicio"></a>   
+      <article class="col-md-3">
+       <a href="">  <img src="img/logo-fumigacion.png" alt="plagas,control" class="logo_inicio"></a>   
           <h5>  Control de plagas </h5>
       </article>
-      <article class="col-xs-12 col-sm-8 col-md-9 col-lg py-3">
-     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="incendios" class="logo_inicio"></a>    
+      <article class="col-md-3">
+     <a href=""> <img src="img/logo-plagas.png" alt="incendios" class="logo_inicio"></a>    
          <h5> seguridad contra incendios </h5>
       </article>
   
-      <article class="col-xs-12  col-sm-8 col-md-9 col-lg py-3">
-      <a href=""><img src="img/limpieza profunda icono.png" alt="limpieza profunda" class="logo_inicio"></a>   
+      <article class="col-md-3">
+      <a href=""><img src="img/logo_tanque-agua.png" alt="limpieza profunda" class="logo_inicio"></a>   
           <h5> Limpieza profunda </h5>
   
       </article>
+    </div>
+
+   
   </section>
   </div>
 
 <footer class="footer">
-  
-  <p class="parrafo_footer">JGdesinfecciones - Todos los derechos reservados- <a href=""> info@JGDESINFECCIONES.COM.ARS</a></p>
-<p class="parrafo_footer"> <a href="">3512002606</a> </p>
+  <div>
+     <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+  <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
+  <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+   <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+  </div>
+   
 </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
