--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -126,10 +126,15 @@
       <!-- TERMINA MAIN -->
 
 
-    <footer class="footer">
-      <p class="parrafo_footer">JGdesinfecciones - Todos los derechos reservados- <a href=""> info@JGDESINFECCIONES.COM.ARS</a></p>
-      <p class="parrafo_footer">312002606</p>
-    </footer>
+      <footer class="footer">
+        <div>
+           <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+        <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
+        <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+         <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+        </div>
+         
+      </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
