--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -74,7 +74,7 @@
 
         <div class="col-md-5 px-5 py-5">
           <h5 class="subtitulos_fumigacion">¿QUE ES UNA FUMIGACION?</h5>
-          <p>
+          <p class="parrafo_fumigacion">
             La fumigación es un tratamiento de control de plagas basado en el
             uso de fumigantes. Un fumigante es un agente químico que, a
             temperatura y presión normales, se encuentra en forma gaseosa y que
@@ -96,25 +96,30 @@
             de espalda, tractores o equipos especiales para fumigar con la
             finalidad de prevenir, controlar, repeler o destruir las plagas o
             enfermedades presentes que pueden afectar a las plantas, los
-            cultivos y por ende las cosechas. En la agricultura, el uso masivo
-            de agroquímicos y plaguicidas en fumigaciones para la protección de
-            cultivos, se inició a partir de la década de 1980, cuando varias
-            empresas de la agroindustria desarrollaron productos para el control
-            de plagas y enfermedades en cultivos de gran efectividad y costo
-            accesible para él agricultor. Esto ha permitido proteger los
-            cultivos de una manera más eficiente. Sin embargo, en el largo
-            plazo, el uso intenso y sin control de pesticidas, puede provocar
-            daños en el medio ambiente, las personas e incluso puede pasar que
-            algunas plagas se vuelvan resistentes. La fumigación también se
-            practica de una forma regular en el entorno urbano cómo en casas,
-            haciendas, bodegas, edificios, etc. Es necesario fumigar para lograr
-            controlar animales que pueden ser vectores de enfermedades para los
-            seres humanos, como es el caso de las cucarachas y las ratas.
+            cultivos y por ende las cosechas.
           </p>
         </div>
       </div>
     </div>
+  
 
+    <div class="container_empresas">
+     <div class="row">
+       <div class="col-md-2">
+        <h2 class="subtitulos_fumigacion">Nuestros clientes</h2>
+       </div>
+       <div class="col-md-10">
+         <img src="img/logo_betosjpg.jpg" alt="" class="logo_empresas">
+         <img src="img/logo_burgerking.png" alt="" class="logo_empresas">
+         <img src="img/logo_mcdonals.png" alt="" class="logo_empresas">
+         <img src="img/logo_walmartpng.png" alt="" class="logo_empresas">
+         <img src="img/logo_mostaza.png" alt="" class="logo_empresas">
+       </div>
+
+     </div>
+
+
+    </div>
     
 
     <div class="d-grid gap-5  py-5" >
@@ -123,12 +128,13 @@
 
     <footer class="footer">
       <div>
-         <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+      <a href="https://www.instagram.com/jg.desinfecciones/">  <img src="img/instagram_logo.png" alt="" class="logo_footer" >  </a>  
       <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
-      <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
-       <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+      <a href="https://www.facebook.com/JGdesinfecciones">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+       <p class="parrafo_footer">   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>   desinfeccionesgonzalez@gmail.com.ar </p>
       </div>
        
+    </footer>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
