--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
    </div>
     
    <div class="col-md-4 py-5">
-     <img src="/img/fumigacion_inicio.jpg" alt="fumigacion" class="img ">
+     <img src="/img/fumigacion_inicio.jpg" alt="fumigacion" class="img_desinfeccion">
 
    </div>
 
@@ -172,13 +172,13 @@
 
 <div class="container py-5 border-top">
   <div class="row">
-    <div class="col-md-6">     
-       <img src="img/asesoramiento.jpg" alt="asesoramiento," class="img">   
+    <div class="col-md-6 py-3" >     
+       <img src="img/asesoramiento.jpg" alt="asesoramiento," class="img_asesoramiento">   
       </div>
     <div class="col-md-6 px-5 py-5">
-    <h2 class="subtitulos">Asesoramiento <span></span></h2>
-    <p>Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
-    <ul>
+    <h2 class="titulos_inicio">Asesoramiento <span></span></h2>
+    <p class="parrafo_inicio">Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
+    <ul class="parrafo_inicio">
       <li>Procesos de desinfección acordes a la real necesidad de cada industria.</li>
       <li>Seguridad y cuidado garantizado para empelados y clientes.</li>
       <li>Uso racionalizado de insumos, evitando gastos por ineficiencias de aplicación.</li>
@@ -225,10 +225,10 @@
 
 <footer class="footer">
   <div>
-     <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+  <a href="https://www.instagram.com/jg.desinfecciones/">  <img src="img/instagram_logo.png" alt="" class="logo_footer" >  </a>  
   <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
-  <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
-   <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+  <a href="https://www.facebook.com/JGdesinfecciones">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+   <p class="parrafo_footer">   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>   desinfeccionesgonzalez@gmail.com.ar </p>
   </div>
    
 </footer>
