--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -120,18 +120,19 @@
   </div>
 
 </div>
-
-
-
       <!-- TERMINA MAIN -->
 
 
+      <div class="d-grid gap-5  py-5" >
+        <button class="btn btn-primary" type="button">Pedir Presupuesto</button>
+      </div>
+
       <footer class="footer">
         <div>
-           <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+        <a href="https://www.instagram.com/jg.desinfecciones/">  <img src="img/instagram_logo.png" alt="" class="logo_footer" >  </a>  
         <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
-        <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
-         <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+        <a href="https://www.facebook.com/JGdesinfecciones">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+         <p class="parrafo_footer">   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>   desinfeccionesgonzalez@gmail.com.ar </p>
         </div>
          
       </footer>
