--- a/contacto.html
+++ b/contacto.html
@@ -70,10 +70,10 @@
     <!-- INICIA FORMULARIO============================================= -->
 
     <div class="container_form">
-      <div class="row px-3 py-4">
-        <div class="col-md-6 py-5  ">
+      <div class="row ">
+        <div class="col-md-6 py-5 px-5 ">
           <form>
-            <h2 class="py-3">Contactanos</h2>
+            <h2 class="titulo_contacto">Contactanos</h2>
             <div class="mb-3">
               <label for="textarea" class="textarea">Nombre</label>
               <input
@@ -118,7 +118,7 @@
           </form>
         </div>
 
-        <div class="col-md-6 px-5 py-5">
+        <div class="col-md-6 px-5 py-5 ">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d217556.82704732328!2d-64.45082939732364!3d-31.570122812399376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-31.7291754!2d-64.4200499!4m5!1s0x94329f402ff5df45%3A0x65720f6d8796fd8!2sjg%20desinfecciones!3m2!1d-31.410563099999997!2d-64.2655283!5e0!3m2!1ses-419!2sar!4v1649633188696!5m2!1ses-419!2sar"
             width="600"
@@ -127,7 +127,7 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          class="w-100" ></iframe>
         </div>
       </div>
     </div>
@@ -137,8 +137,8 @@
     
     <div class="container_aside">
       <div class="row">
-        <div class="col-md-12">
-          <h4 class="subtitulo_contacto">Medios de Contacto</h4>
+        <div class="col-md-12 border-bottom">
+          <h4 class="titulo_contacto">Medios de Contacto</h4>
 
           <div class="informacion">
             <h6 class="py-1">
@@ -154,7 +154,7 @@
               03512002606
             </h6>
             <h6 class="py-1">
-              <p>Horarios de atencion: de lunes a viernes de 8 a 16hs</p>
+              <p class="parrafo_contacto">Horarios de atencion: de lunes a viernes de 8 a 16hs</p>
             </h6>
             <h6 class="py-1">
               <p>
@@ -171,12 +171,13 @@
 
     <footer class="footer">
       <div>
-         <img src="img/instagram_logo.png" alt="" class="logo_footer" >
+      <a href="https://www.instagram.com/jg.desinfecciones/">  <img src="img/instagram_logo.png" alt="" class="logo_footer" >  </a>  
       <a href="">  <img src="img/twitter_logo.png" alt="" class="logo_footer"> </a> 
-      <a href="">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
-       <p>   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>desinfeccionesgonzalez@gmail.com.ar </p>
+      <a href="https://www.facebook.com/JGdesinfecciones">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
+       <p class="parrafo_footer">   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>   desinfeccionesgonzalez@gmail.com.ar </p>
       </div>
        
+    </footer>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
