--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
    </div>
     
    <div class="col-md-4 py-5">
-     <img src="/img/fumigacion_inicio.jpg" alt="fumigacion" class="img_desinfeccion">
+     <img src="img/fumigacion_inicio.jpg" alt="fumigacion" class="img_desinfeccion">
 
    </div>
 
@@ -120,8 +120,10 @@
 
 
 
+
+
+
 <!-- EMPIEZA 2DA SECTION=============================================== -->
-  
 <section class="section_dos">
 <div class="container">
   <section>
@@ -155,21 +157,16 @@
 </div>
 
 </div>
-
-
-
-
-
-
-
-
-
-
 <!-- TERMINA 2DA SECTION========================================== -->
 
 
-<!-- EMPIEZA 3RA SECTION -->
 
+
+
+
+
+
+<!-- EMPIEZA 3RA SECTION -->
 <div class="container py-5 border-top">
   <div class="row">
     <div class="col-md-6 py-3" >     
@@ -189,8 +186,6 @@
   </div>
 
 </div>
-
-
 <!-- TERMINA 3RA SECTION -->
 
 
@@ -223,6 +218,9 @@
   </section>
   </div>
 
+
+
+ <!-- //EMPIEZA FOOTER============= -->
 <footer class="footer">
   <div>
   <a href="https://www.instagram.com/jg.desinfecciones/">  <img src="img/instagram_logo.png" alt="" class="logo_footer" >  </a>  
@@ -230,8 +228,11 @@
   <a href="https://www.facebook.com/JGdesinfecciones">  <img src="img/facebook_logo.png" alt="" class="logo_footer">  </a>
    <p class="parrafo_footer">   <a href="">  <img src="img/gmail_logo.png" alt="" class="logo_footer">   </a>   desinfeccionesgonzalez@gmail.com.ar </p>
   </div>
-   
 </footer>
+<!-- TERMINA FOOTER=================== -->
+
+
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
