--- a/index.html
+++ b/index.html
@@ -196,20 +196,20 @@
     <div class="row">
    <article class="col-md-3 ">
          <a href=""><img src="img/operador.png" alt="tanques,limpieza" class="logo_inicio"></a>  
-          <h5>  Limpieza de tanques </h5>
+          <h5 class="titulos_trabajos">  Asesoramiento</h5>
       </article>
       <article class="col-md-3">
        <a href="">  <img src="img/logo-fumigacion.png" alt="plagas,control" class="logo_inicio"></a>   
-          <h5>  Control de plagas </h5>
+          <h5 class="titulos_trabajos"> Fumigacion</h5>
       </article>
       <article class="col-md-3">
      <a href=""> <img src="img/logo-plagas.png" alt="incendios" class="logo_inicio"></a>    
-         <h5> seguridad contra incendios </h5>
+         <h5 class="titulos_trabajos"> Control de plagas </h5>
       </article>
   
       <article class="col-md-3">
       <a href=""><img src="img/logo_tanque-agua.png" alt="limpieza profunda" class="logo_inicio"></a>   
-          <h5> Limpieza profunda </h5>
+          <h5 class="titulos_trabajos"> Limpieza De Tanques</h5>
   
       </article>
     </div>
