--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="row">
    <div class="col-md-8 py-3">
      <h2 class="titulos_inicio">Expertos en desinfecciones</h2>
-     <p class="parrafo_inicio">Para la seguridad de las personas que se encuentran en un espacio, ya sea viviendo, trabajando o simplemente de paso, es fundamental el mantenimiento de un correcto nivel de higiene y limpieza. En el caso de las empresas, a lo anterior se le suma el impacto económico, puesto que las condiciones de higiene y limpieza que se dan en el desarrollo de la actividad de un negocio repercuten directa o indirectamente en sus resultados a través de diversos factores; como la productividad de los empleados, el correcto funcionamiento y mantenimiento de equipos y maquinaria, o la calidad del producto o servicio prestado al cliente.
+     <p class="parrafo_inicio">
       Como empresa de desinfecciones en Córdoba, sabemos que la mejor manera de obtener resultados óptimos es prestando servicios personalizados que se adapten en cada caso a las circunstancias y necesidades del cliente. Para ello, nuestros técnicos llevan a cabo previamente una inspección del espacio en el que se va a realizar la limpieza y desinfección. A partir de este estudio, elaboramos un plan de acción que se ajuste a las características de las instalaciones y los elementos que se encuentran en ella, seleccionando así las estrategias y productos más eficientes para cada servicio. Todo esto, cumpliendo siempre las normativas sanitarias y garantizando un servicio de máxima calidad.</p>
    </div>
     
