--- a/empresa.html
+++ b/empresa.html
@@ -130,7 +130,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col-md-3">
       <div class="card bg-secondary">
-        <img src="img/card_uno_empresa.jpg" class="card-img-top" alt="...">
+        <img src="img/control de plagas.jpg" class="card_plagas" alt="...">
         <div class="card-body">
           <h5 class="card-title">Control De Plagas</h5>
         <a href="control-de-plagas.html"> <button type="button" class="btn btn-outline-info"> Info</button></a> 
