--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
     <!-- TERMINA NAV================================= -->
 
     <div class="imagen_contacto">
-      <img src="img/carrousel_contacto.jpg" alt="contacto" class="w-100" />
+      <img src="img/contactanos-2-min.jpg" alt="contacto" class="w-100" />
     </div>
 
     <!-- INICIA FORMULARIO============================================= -->
