--- a/control-de-plagas.html
+++ b/control-de-plagas.html
@@ -67,7 +67,7 @@
       <div class="row py-4 border-bottom">
         <div class="col-md-6">
           <img 
-            src="img/control_plagas.jpg"
+            src="img/control_plagas-min.jpg"
             alt=""
             class="img"
             />
