--- a/empresa.html
+++ b/empresa.html
@@ -158,7 +158,7 @@
 
     <div class="col-md-3">
       <div class="card  bg-secondary">
-        <img src="img/card_tanque.jpg" class="card-img-top" alt="...">
+        <img src="img/card_tanque-min.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Limpieza De Tanques</h5>
        <a href="limpieza-de-tanques.html"> <button type="button" class="btn btn-outline-info">Info</button></a>  
@@ -169,7 +169,7 @@
 
  <div class="col-md-3">
       <div class="card bg-secondary">
-        <img src="img/card_2_empresa.jpg" class="card-img-top" alt="...">
+        <img src="img/card_2_empresa-min.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Desinfeccion</h5>
         <a href=""></a>  <button type="button" class="btn btn-outline-info">Info</button>
