--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -109,7 +109,7 @@
         <h2 class="subtitulos_fumigacion">Nuestros clientes</h2>
        </div>
        <div class="col-md-10">
-         <img src="img/logo_betosjpg.jpg" alt="" class="logo_empresas">
+         <img src="img/logo_betosjpg-min.jpg" alt="" class="logo_empresas">
          <img src="img/logo_burgerking.png" alt="" class="logo_empresas">
          <img src="img/logo_mcdonals.png" alt="" class="logo_empresas">
          <img src="img/logo_walmartpng.png" alt="" class="logo_empresas">
