--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="col-md-5 px-4 py-4">
-          <img src="img/Limpieza de tanques.jpg" alt="" />
+          <img src="img/Limpieza de tanques-min.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
   <div class="row py-5">
     <div class="col-md-6">
     
-    <img src="img/tanques_de_agua.jpg" alt="" class="w-100">
+    <img src="img/card_tanque_empresa-min.jpg" alt="" class="w-100">
     </div>
       
     <div class="col-md-6">
