--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   </div>
   <div class="carousel-inner" >
     <div class="carousel-item active">
-      <img src="img/carrousel_5.jpg" class="d-block w-100 " alt="desinfecciones,fumigacion">
+      <img src="img/carrousel_5-min.jpg" class="d-block w-100 " alt="desinfecciones,fumigacion">
     </div>
     <div class="carousel-item">
-      <img src="img/carrousel_6.jpg" class="d-block w-100" alt="carrousel,desinfeccion">
+      <img src="img/carrousel_6-min.jpg.crdownload" class="d-block w-100" alt="carrousel,desinfeccion">
     </div>
     <div class="carousel-item">
-      <img src="img/carrousel_7.jpg" class="d-block w-100" alt="carrousel,fumigacion">
+      <img src="img/carrousel_7-min.jpg" class="d-block w-100" alt="carrousel,fumigacion">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -109,7 +109,7 @@
    </div>
     
    <div class="col-md-4 py-5">
-     <img src="img/fumigacion_inicio.jpg" alt="fumigacion" class="img_desinfeccion">
+     <img src="img/fumigacion_inicio-min.jpg" alt="fumigacion" class="img_desinfeccion">
 
    </div>
 
@@ -170,7 +170,7 @@
 <div class="container py-5 border-top">
   <div class="row">
     <div class="col-md-6 py-3" >     
-       <img src="img/asesoramiento.jpg" alt="asesoramiento," class="img_asesoramiento">   
+       <img src="img/asesoramiento-min.jpg" alt="asesoramiento," class="img_asesoramiento">   
       </div>
     <div class="col-md-6 px-5 py-5">
     <h2 class="titulos_inicio">Asesoramiento <span></span></h2>
